--- a/Electricity_BIll_using_SpringBoot_and_MySQL/electricityBill/src/main/resources/application.properties
+++ b/Electricity_BIll_using_SpringBoot_and_MySQL/electricityBill/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.application.name=
+spring.application.name=electricityBill
 
-spring.datasource.url =
-spring.datasource.username = 
-spring.datasource.password =
+spring.datasource.url=jdbc:mysql://localhost:8889/newdb
+spring.datasource.username=root
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# server.port=8080
