--- a/Book_Store_using_Spring_React_and_MySQL/bookstore/src/main/resources/application.properties
+++ b/Book_Store_using_Spring_React_and_MySQL/bookstore/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=bookstore
 
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=
+spring.datasource.url=jdbc:mysql://localhost:8889/newdb
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
