--- a/Grocery_Store_using_Springboot_with_Auth/groceryauth/src/main/resources/application.properties
+++ b/Grocery_Store_using_Springboot_with_Auth/groceryauth/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=groceryauth
+
+spring.datasource.url=jdbc:mysql://localhost:8889/newdb
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# server.port=8080
