--- a/Sem_Result_using_Springboot_and_MySQL/result/src/main/resources/application.properties
+++ b/Sem_Result_using_Springboot_and_MySQL/result/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=result
+
+spring.datasource.url=jdbc:mysql://localhost:8889/newdb
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
